--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
