--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-sketch-canvas": "^6.2.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1"
