--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "moment": "^2.30.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.2",
     "react": "^18.2.0",
